--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ http://www.templatemo.com/tm-512-moonlight
                       <h2>Hayley Jowitt</h2>
                       <p>Welcome to my online resume!, It's pretty basic but i'm not a backend developer (nor do i want to be!). <em>I repeat, I do NOT want to be a backend developer</em> thanks please enjoy</p>
                       <div class="main-btn"><a href="#2">take me to the cv </a></div>
-                      <div class="fb-btn"><a href="#2">About me </a></div>
+                      <div class="main-btn"><a href="#3">About me </a></div>
                         </div>
                     </div>
             </div>
