--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
         <div class="container py-5">
             <div class="row mb-5">
                 <div class="col-md-8 col-xl-6 text-center mx-auto">
-                    <p class="fw-bold text-success mb-2">Testimonials</p>
-                    <h2 class="fw-bold"><strong>What People Say About us</strong></h2>
-                    <p class="text-muted">No matter the project, our team can handle it.&nbsp;</p>
+                    <p class="fw-bold text-success mb-2">using Bootstrap &amp; GitHub</p>
+                    <h2 class="fw-bold"><strong>I built this website for free</strong></h2>
+                    <p class="text-muted">and it was an absolute pain</p>
                 </div>
             </div>
             <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 d-sm-flex justify-content-sm-center">
