video fix attemp 1

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>Hayley Jowitt - Resume</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&amp;display=swap">
@@ -74,19 +74,19 @@ function copying_function(string) {
             <div class="row">
                 <div class="col-md-4 col-lg-4 offset-lg-0">
                     <div></div><video class="vid-1" controls="" width="100%" height="100%" autoplay="" loop="" muted="">
-                        <source src="C:\Users\hayle\Videos\WEbsite\clip 3.mp4" type="video/mp4">
+                        <source src="clip 3.mp4" type="video/mp4">
                     </video>
                     <h3 class="vid-1-heading" style="text-align: center;margin-bottom: 0;padding-bottom: 0;padding-top: 1rem;">DJing</h3>
                 </div>
                 <div class="col-md-4">
                     <div></div><video class="vid-2" controls="" width="100%" height="100%" autoplay="" loop="" muted="">
-                        <source src="C:\Users\hayle\Videos\WEbsite\plant.mp4" type="video/webm">
+                        <source src="plant.mp4" type="video/webm">
                     </video>
                     <h3 class="vid-2-heading" style="text-align: center;margin-bottom: 0;padding-bottom: 0;padding-top: 1rem;">Gardening</h3>
                 </div>
                 <div class="col-md-4">
                     <div class="cool-hover"></div><video class="vid-3" controls="" width="100%" height="100%" autoplay="" loop="" muted="">
-                        <source src="C:\Users\hayle\Videos\WEbsite\ableton.mp4" type="video/mp4">
+                        <source src="ableton.mp4" type="video/mp4">
                     </video>
                     <h3 class="vid-3-heading" style="text-align: center;margin-bottom: 0;padding-bottom: 0;padding-top: 1rem;">Production</h3>
                 </div>
