--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ function copying_function(string) {
                     <h3 class="vid-2-heading" style="text-align: center;margin-bottom: 0;padding-bottom: 0;padding-top: 1rem;">Gardening</h3>
                 </div>
                 <div class="col-md-4">
-                    <div class="cool-hover"></div><video class="vid-3" controls width="100%" height="100%" loop muted src="video/ableton.mp4">
+                    <div class="cool-hover"></div><video class="vid-3" controls width="100%" height="100%" loop muted src="assets/video/ableton.mp4">
 </video>
                     <h3 class="vid-3-heading" style="text-align: center;margin-bottom: 0;padding-bottom: 0;padding-top: 1rem;">Production</h3>
                 </div>
