--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ function copying_function(string) {
         </div>
     </nav>
     <header class="bg-dark">
-        <div class="container" style="background: url(&quot;assets/img/her%20bg.png&quot;);height: 600px;width: 100%;max-width: 100%;">
+        <div class="container" style="background: url(&quot;assets/img/her%20bg.jpg&quot;);height: 600px;width: 100%;max-width: 100%;">
             <div class="row align-items-center" style="margin-left: 0;margin-right: 0;height: 100%;">
                 <div class="col-lg-4" style="padding: 0;height: 100%;padding-left: 18%;margin-left: -273px;"><img data-aos="fade-right" data-aos-duration="1350" style="width: auto;height: 100%;max-height: 100%;" src="assets/img/Chair.png" width="365" height="600">
                     <div></div>
@@ -73,15 +73,13 @@ function copying_function(string) {
             </div>
             <div class="row">
                 <div class="col-md-4 col-lg-4 offset-lg-0">
-                    <div></div><video class="vid-1" controls="" width="100%" height="100%" autoplay="" loop="" muted="">
-                        <source src="clip 3.mp4" type="video/mp4">
-                    </video>
+                    <div></div><video class="vid-1" controls width="100%" height="100%" loop muted src="assets/video/clip 3.mp4">
+</video>
                     <h3 class="vid-1-heading" style="text-align: center;margin-bottom: 0;padding-bottom: 0;padding-top: 1rem;">DJing</h3>
                 </div>
                 <div class="col-md-4">
-                    <div></div><video class="vid-2" controls="" width="100%" height="100%" autoplay="" loop="" muted="">
-                        <source src="plant.mp4" type="video/webm">
-                    </video>
+                    <div></div><video class="vid-2" controls width="100%" height="100%" loop muted src="assets/video/plant.mp4">
+</video>
                     <h3 class="vid-2-heading" style="text-align: center;margin-bottom: 0;padding-bottom: 0;padding-top: 1rem;">Gardening</h3>
                 </div>
                 <div class="col-md-4">
