--- a/CV.html
+++ b/CV.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>CV</title>
+    <link rel="icon" type="image/svg+xml" sizes="16x16" href="assets/img/gear%2016.svg">
+    <link rel="icon" type="image/svg+xml" sizes="32x32" href="assets/img/gear.svg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&amp;display=swap">
@@ -12,6 +14,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed&amp;display=swap">
     <link rel="stylesheet" href="assets/css/extra.css">
     <link rel="stylesheet" href="assets/css/Skills%20Stuff.css">
+<link rel="icon" type="image/x-icon" href="assets/img/gear 16.svg">
 </head>
 
 <body>
