--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Hayley Jowitt - Resume</title>
+    <link rel="icon" type="image/svg+xml" sizes="16x16" href="assets/img/gear%2016.svg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&amp;display=swap">
@@ -13,6 +14,7 @@
     <link rel="stylesheet" href="assets/css/aos.min.css">
     <link rel="stylesheet" href="assets/css/extra.css">
     <link rel="stylesheet" href="assets/css/Skills%20Stuff.css">
+<link rel="icon" type="image/x-icon" href="assets/img/gear 16.svg">
 </head>
 
 <body>
@@ -73,7 +75,7 @@ function copying_function(string) {
             </div>
             <div class="row">
                 <div class="col-md-4 col-lg-4 offset-lg-0">
-                    <div></div><video class="vid-1" controls width="100%" height="100%" loop muted src="assets/video/clip 3.mp4">
+                    <div></div><video class="vid-1" controls width="100%" height="100%" loop muted src="assets/video/Clip 3.mp4">
 </video>
                     <h3 class="vid-1-heading" style="text-align: center;margin-bottom: 0;padding-bottom: 0;padding-top: 1rem;">DJing</h3>
                 </div>
