--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
                     <li class="nav-item"><a class="nav-link active" href="home.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="CV.html">CV</a></li>
                 </ul><script>
-var email = "hayley.jowitt@uq.net.au";
+var email = "hayleyjbusiness@gmail.com";
 </script>
 
 <button class="btn btn-primary shadow" type="button" onclick="copying_function(email)">Copy Email</button>
