--- a/home.html
+++ b/home.html
@@ -95,10 +95,10 @@ function copying_function(string) {
     </header>
     <section class="py-5" style="height: auto;">
         <div class="container text-center py-5" style="padding-top: 12px;height: 320.737px;">
-            <h1><strong><span style="color: rgb(64, 230, 98);">3rd</span></strong>&nbsp;yr&nbsp;<strong>B.E&nbsp;</strong>&nbsp;(Mech &amp; Material) Student<br></h1>
+            <h1><strong><span style="color: rgb(64, 230, 98);">4th</span></strong> yr&nbsp;<strong>B.E&nbsp;</strong>&nbsp;(Mech &amp; Material) Student<br></h1>
             <p class="mb-4-alt" style="font-size: 1.6rem;"><img class="m-3" src="assets/img/brands/Uq%20logo.svg" style="width: 250px;"><br></p>
             <p class="mb-4" style="font-size: 1.0rem;margin-bottom: 0;">Top&nbsp;<strong><span style="color: rgb(64, 230, 104);">3</span></strong>&nbsp;Engineering Universities in Oceania - Edurank.org, 2023<br>Top <strong><span style="color: rgb(64, 230, 104);">50&nbsp;</span></strong>Universities globally -&nbsp;QS World University Rankings, 2024<br></p>
-            <p class="mb-4-alt" style="font-size: 1.6rem;">Semester 1 2023, GPA:&nbsp;<strong><span style="color: rgb(64, 230, 104);">6.25</span></strong>&nbsp; (Full time)<br></p><a href="#"> </a>
+            <p class="mb-4-alt" style="font-size: 1.6rem;">Semester 2 2023, GPA:&nbsp;<strong><span style="color: rgb(64, 230, 104);">6.25</span></strong>&nbsp; (Full time)<br></p><a href="#"> </a>
         </div>
     </section>
     <section class="d-flex flex-grow-1" style="height: auto;">
