--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ function copying_function(string) {
             </div>
             <div class="row">
                 <div class="col-md-4 col-lg-4 offset-lg-0">
-                    <div></div><video class="vid-1" controls width="100%" height="100%" loop muted src="assets/video/RP #11 Performance.mp4">
+                    <div></div><video class="vid-1" controls width="100%" height="100%" loop muted src="assets/video/Clip 3.mp4">
 </video>
                     <h3 class="vid-1-heading" style="text-align: center;margin-bottom: 0;padding-bottom: 0;padding-top: 1rem;">DJing</h3>
                 </div>
