--- a/index.html
+++ b/index.html
@@ -189,12 +189,12 @@ function copying_function(string) {
                 </div>
             </div>
             <div class="ag-container" style="padding-top: 36px;">
-                <p style="padding-bottom: 0px;margin-bottom: 0px;font-family: Roboto, sans-serif;"><strong>ABLETON</strong></p>
+                <p style="padding-bottom: 0px;margin-bottom: 0px;font-family: Roboto, sans-serif;"><strong>PYTHON</strong></p>
                 <div class="row" style="height: 51px;width: 100%;">
-                    <div class="col-xl-1 d-flex" style="text-align: left;max-width: 0;width: 0;padding-left: 0;height: 100%;padding-right: 0;padding-top: 4px;padding-bottom: 4px;"><img class="d-sm-none d-md-none d-lg-flex" src="assets/img/brands/icons8-ableton-100.png" style="margin-left: -66px;height: 100%;"></div>
+                    <div class="col-xl-1 d-flex" style="text-align: left;max-width: 0;width: 0;padding-left: 0;height: 100%;padding-right: 0;padding-top: 4px;padding-bottom: 4px;"><img class="d-sm-none d-md-none d-lg-flex" src="assets/img/brands/python.png" style="margin-left: -66px;height: 100%;"></div>
                     <div class="col" style="padding-right: 0;padding-left: 0;height: 100%;">
                         <div class="ag-skills-container" style="width: 100%;overflow: hidden;height: 100%;">
-                            <div class="d-flex skills html skill-bar" data-aos="slide-right" data-aos-duration="2000" style="background: rgb(255,206,133);width: 90%;"><input class="form-control-plaintext" type="text" data-aos="fade" data-aos-duration="1500" data-aos-delay="500" value="90%" readonly=""></div>
+                            <div class="d-flex skills html skill-bar" data-aos="slide-right" data-aos-duration="2000" style="background: rgb(255,206,133);width: 60%;"><input class="form-control-plaintext" type="text" data-aos="fade" data-aos-duration="1500" data-aos-delay="500" value="60%" readonly="" style="width: 100%;"></div>
                         </div>
                     </div>
                 </div>
